
2.8 beta
    - Added global option to allow file links relative to the bib file location, in addition
      to the global or database- or user-specific file directory.
    - Fixed bug 3434674: Reviewing changes overwrites groups.
    - Integrated the plugin for interaction with OpenOffice/LibreOffice as a standard part
      of JabRef.
    - Added keyboard shortcuts Ctrl-Up and Ctrl-Down to move file links up and down in a list
      of external links in the entry editor.
    - Applied "bjoerntm"'s patch for making the loading of group information less sensitive
      to white space, in order to prevent trouble loading files written by other tools.
    - Added optional autocompletion of author/editor last names in search field.
    - Changed entry fetcher system so all fetchers are accessed from a single side pane
      component with a selector.
    - Added INSPIRE fetcher by Sheer El-Showk.
    - Improved error handling when importing in specific format.
    - Prevented crash when calling invalid import format on startup.
    - Improved duplicate detection.
    - Added markers \filename and \filepath for ".begin.layout" and ".end.layout" files
      in order to output the name or full path of the bib file of the exported database.
    - Fixed possible array index exception in LastPage formatter.
    - Improved author/editor normalization in entry editor.
    - Added metadata extraction from text when PDFs are dragged into JabRef.
    - The filename pattern for renaming a file when dropping a PDF can now be
      configured at "Options"/"Preferences"/"Import"/"File name format pattern".
    - The defaults of the ImportDialog shown when PDFs are dragged into JabRef
      can now be configured at "Options"/"Preferences"/"Import". It is possible to
      override showing the ImportDialog.
    - An entry can be sent by a right click on an entry and select "Send as Email"
      (patch 3306271).
    - Added option to "copy BibTeX key and title" (patch 3370471).