@@ -2316,10 +2316,11 @@ An_Error_occurred_while_fetching_from_INSPIRE_source_(%0)\:=An_Error_occurred_wh
 Error_while_fetching_from_Inspire\:_=Error_while_fetching_from_Inspire\:_
 Web_search=Web_search
 Autocomplete_names=Autocomplete_names
-Default_style=Default_style
+Default_style_(author-year_citations)=Default_style_(author-year_citations)
+Default_style_(numerical_citations)=Default_style_(numerical_citations)
 Choose_style_file_directly=Choose_style_file_directly
 Choose_from_a_directory=Choose_from_a_directory
-You_must_select_either_a_valid_style_file,_or_use_the_default_style.=You_must_select_either_a_valid_style_file,_or_use_the_default_style.
+You_must_select_either_a_valid_style_file,_or_use_a_default_style.=You_must_select_either_a_valid_style_file,_or_use_a_default_style.
 No_directory_defined_for_%0-files=No_directory_defined_for_%0-files
 Allow_file_links_relative_to_each_bib_file's_location=Allow_file_links_relative_to_each_bib_file's_location
 Style_selection=Style_selection
