@@ -1,5 +1,6 @@
 
 2.8 beta
+    - A large list of journal abbreviations is now loaded by default.
     - Added global option to allow file links relative to the bib file location, in addition
       to the global or database- or user-specific file directory.
     - Fixed bug 3434674: Reviewing changes overwrites groups.
